[gd_scene load_steps=4 format=2]

[ext_resource path="res://INTRO/main_bg.png" type="Texture" id=1]
[ext_resource path="res://Menu.gd" type="Script" id=2]
[ext_resource path="res://Music and Sounds/intro_main.wav" type="AudioStream" id=3]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="MainBg" type="Sprite" parent="."]
position = Vector2( 160, 90 )
scale = Vector2( 0.175694, 0.175694 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="StartButton" type="Button" parent="."]
margin_left = 127.0
margin_top = 83.0
margin_right = 200.0
margin_bottom = 103.0
rect_pivot_offset = Vector2( 18, 10 )
text = "START"

[node name="OptionsButton" type="Button" parent="."]
margin_left = 127.0
margin_top = 109.0
margin_right = 200.0
margin_bottom = 129.0
rect_pivot_offset = Vector2( 18, 10 )
text = "Options"

[node name="QuitButton" type="Button" parent="."]
margin_left = 127.0
margin_top = 135.0
margin_right = 199.0
margin_bottom = 155.0
rect_pivot_offset = Vector2( 18, 10 )
text = "Quit"

[node name="Main_MS" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="tree_exiting" from="QuitButton" to="." method="_on_QuitButton_tree_exiting"]
[connection signal="ready" from="Main_MS" to="." method="_on_Main_MS_ready"]
